--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
         "anik/form-request": "^5.0",
         "flipbox/lumen-generator": "^9.2",
         "illuminate/mail": "*",
+        "illuminate/notifications": "*",
+        "illuminate/support": "*",
+        "irazasyed/larasupport": "^1.1",
         "laravel/lumen-framework": "^10.0",
         "league/flysystem": "^3.18",
         "league/flysystem-aws-s3-v3": "^3.16",
